Replace broken links to kernel.org

--- a/zh/basic/index.html
+++ b/zh/basic/index.html
@@ -28,7 +28,7 @@ layout: zh_reference
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-add.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-2.html#tracking_new_files">书</a>
     </span>
     <a name="add">git add</a>
@@ -94,7 +94,7 @@ layout: zh_reference
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-status.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-status.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-2.html#checking_the_status_of_your_files">书</a>
     </span>
     <a name="status">git status</a>
@@ -162,7 +162,7 @@ layout: zh_reference
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-diff.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-2.html#viewing_your_staged_and_unstaged_changes">书</a>
     </span>
     <a name="diff">git diff</a>
@@ -337,7 +337,7 @@ index 2aabb6e..2ae9ba4 100644
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-commit.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-2.html#committing_your_changes">书</a>
     </span>
     <a name="commit">git commit</a>
@@ -475,7 +475,7 @@ nothing to commit (working directory clean)
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-reset.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-reset.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-4.html#unstaging_a_staged_file">书</a>
     </span>
     <a name="reset">git reset HEAD</a>
@@ -544,7 +544,7 @@ M hello.rb
 <div class="box">
   <h2>
     <span class="docs">
-      <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rm.html">文档</a> &nbsp;
+      <a href="http://schacon.github.com/git/git-rm.html">文档</a> &nbsp;
       <a href="http://progit.org/book/ch2-2.html#removing_files">书</a>
     </span>
     <a name="rm-mv">git rm</a>
