--- a/zh/branching/index.html
+++ b/zh/branching/index.html
@@ -23,7 +23,7 @@ layout: zh_reference
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-branch.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-branch.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch3-2.html">书</a>
     </span>
     <a name="branch">git branch</a>
@@ -34,7 +34,7 @@ layout: zh_reference
 
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-checkout.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch3-2.html">书</a>
     </span>
     <a name="checkout">git checkout</a>
@@ -176,7 +176,7 @@ Deleted branch testing (was 78b2670).
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">docs</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-merge.html">docs</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch3-2.html#basic_merging">book</a>
     </span>
     <a name="merge">git merge</a>
@@ -342,7 +342,7 @@ This project has examples of hello world in
 nearly every programming language.
 </pre>
 
-    <p>您可以看到，Git 在产生合并冲突的地方插入了标准的与 Subversion 很像的合并冲突标记。轮到我们去解决这些冲突了。在这里我们就手动把它解决。如果您要 Git 打开一个图形化的合并工具，可以看看 <a href="http://www.kernel.org/pub/software/scm/git/docs/git-mergetool.html">git 合并工具</a>（比如 kdiff3、emerge、p4merge 等）。
+    <p>您可以看到，Git 在产生合并冲突的地方插入了标准的与 Subversion 很像的合并冲突标记。轮到我们去解决这些冲突了。在这里我们就手动把它解决。如果您要 Git 打开一个图形化的合并工具，可以看看 <a href="http://schacon.github.com/git/git-mergetool.html">git 合并工具</a>（比如 kdiff3、emerge、p4merge 等）。
     </p>
 
 <pre>
@@ -386,7 +386,7 @@ M  README
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-log.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch6-1.html#commit_ranges">书</a>
     </span>
     <a name="log">git log</a>
@@ -560,7 +560,7 @@ ab5ab4c added erlang
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-tag.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-6.html">书</a>
     </span>
     <a name="tag">git tag</a>
