--- a/zh/inspect/index.html
+++ b/zh/inspect/index.html
@@ -23,7 +23,7 @@ layout: zh_reference
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-log.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-3.html">书k</a>
     </span>
     <a name="log">git log</a>
@@ -268,7 +268,7 @@ Date:   Fri Jun 4 12:58:53 2010 +0200
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-diff.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch5-3.html#determining_what_is_introduced">书</a>
     </span>
     <a name="diff">git diff</a>
