--- a/zh/creating/index.html
+++ b/zh/creating/index.html
@@ -18,7 +18,7 @@ layout: zh_reference
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">文档</a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-init.html">文档</a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-1.html#initializing_a_repository_in_an_existing_directory">书</a>
     </span>
     <a name="init">git init</a>
@@ -60,7 +60,7 @@ Initialized empty Git repository in /opt/konichiwa/.git/
 <div class="box">
   <h2>
     <span class="docs">
-      <a target="new" href="http://www.kernel.org/pub/software/scm/git/docs/git-clone.html">文档 </a> &nbsp;
+      <a target="new" href="http://schacon.github.com/git/git-clone.html">文档 </a> &nbsp;
       <a target="new" href="http://progit.org/book/ch2-1.html#cloning_an_existing_repository">书</a>
     </span>
     <a name="clone">git clone</a>
