--- a/vi/creating/index.html
+++ b/vi/creating/index.html
@@ -3,7 +3,7 @@ layout: vi_reference
 ---
 
 <div class="box">
-  <h2>Nhận và Tạo Dự Án</h2>
+  <h2>Khai Thác và Tạo Dự Án</h2>
   <div class="block">
     <!--<p>
     In order to do anything in Git, you have to have a Git repository.  This
@@ -38,7 +38,7 @@ layout: vi_reference
       <a target="new" href="http://git-scm.com/book/en/Git-Basics-Getting-a-Git-Repository#Initializing-a-Repository-in-an-Existing-Directory">book</a>
     </span>
     <a name="init">git init</a>
-    <span class="desc">tạo kho lưu trữ từ thư mục sẵn có</span>
+    <span class="desc">khởi tạo kho lưu trữ từ thư mục sẵn có</span>
   </h2>
 
   <div class="block">
@@ -61,10 +61,10 @@ README   hello.rb
     a start.  To start version controlling this with Git, we can simply
     run <code>git init</code>.
     </p>-->
-    <p>Trong dự án này, ta viết chương trình "Hello World" trong các ngôn
-    ngữ khác nhau, và ta bắt đầu với ngôn ngữ Ruby. Ta sẽ tạo mới một
-    kho lưu trữ Git cho thư mục 'konichiwa', cũng là cho dự án với lệnh
-    <code>git init</code>:</p>
+    <p>Trong dự án này, chương trình "Hello World" được viết bằng các ngôn
+    ngữ khác nhau, và Ruby là ngôn ngữ đầu tiên. Để bắt đầu quản lý
+    phiên bản với Git, đơn giản ta chạy lệnh <code>git init</code> để
+    tạo kho lưu trữ:</p>
 
 <pre>
 <b>$ git init</b>
@@ -170,7 +170,7 @@ config      index       <span class="blue">objects</span>
     </p>-->
     <p>
     Khi nhân bản, Git mặc định tạo một thư mục cùng tên với kho Git trong phần địa
-    chỉ được cho khi nhân bản (phần tên này nằm sau dấu gạch / cuối cùng).
+    chỉ được cho khi nhân bản (phần tên này nằm sau dấu gạch chéo cuối cùng).
     Tuy nhiên, nếu bạn muốn kết quả nhân bản nằm trong thư mục khác, bạn có thể
     chỉ ra ở sau địa chỉ kho (cách với địa chỉ kho ít nhất một khoảng trắng.)
     </p>
